--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
 		<title>The Menu</title>
 	</head>
 	<body class="text-gray-600 font-nunito">
-		<div class="grid md:grid-cols-3">
+		<div class="grid md:grid-cols-6">
 			<div class="md:col-span-1 md:flex md:justify-end">
 				<nav class="text-right">
 					<div class="flex justify-between items-center">
 						<h1 class="font-bold uppercase p-4 border-b border-gray-100">
 							<a
-								href="/"
+								href="#"
 								class="hover:text-orange-500"
 								>The Menu</a
 							>
@@ -45,7 +45,7 @@
 						id="menu">
 						<li class="py-1">
 							<a
-								href="/"
+								href=" #"
 								class="px-4 flex justify-end">
 								<span>Home</span>
 								<svg
@@ -106,7 +106,7 @@
 					</ul>
 				</nav>
 			</div>
-			<main class="px-16 py-6 bg-gray-100 md:col-span-2">
+			<main class="px-16 py-6 bg-gray-100 md:col-span-5">
 				<div class="flex justify-center md:justify-end">
 					<a
 						href="#"
@@ -131,6 +131,7 @@
 						<!--cards go here-->
 						<div class="card hover:shadow-lg">
 							<img
+								class="w-full h-32 sm:h-48 object-cover"
 								src="/public/img/curry.jpeg"
 								alt="curry" />
 							<div class="m-4">
@@ -156,6 +157,7 @@
 						</div>
 						<div class="card hover:shadow-lg">
 							<img
+								class="w-full h-32 sm:h-48 object-cover"
 								src="/public/img/stew.jpeg"
 								alt="stew" />
 							<div class="m-4">
@@ -182,6 +184,7 @@
 						</div>
 						<div class="card hover:shadow-lg">
 							<img
+								class="w-full h-32 sm:h-48 object-cover"
 								src="/public/img/noodles.jpg"
 								alt="noodles" />
 							<div class="m-4">
@@ -213,15 +216,14 @@
 						<!--cards go here-->
 					</div>
 					<div class="flex justify-center">
-						<div class="btn bg-orange-300 hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">
+						<div
+							class="btn bg-orange-300 hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">
 							Load more ...
 						</div>
 					</div>
 				</div>
 			</main>
 		</div>
-		<script src="index.js">
-			
-		</script>
+		<script src="index.js"></script>
 	</body>
 </html>
