--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<link
-			href="/src/output.css"
+			href="output.css"
 			rel="stylesheet" />
 		<title>The Menu</title>
 	</head>
@@ -132,7 +132,7 @@
 						<div class="card hover:shadow-lg">
 							<img
 								class="w-full h-32 sm:h-48 object-cover"
-								src="/public/img/curry.jpeg"
+								src="img/curry.jpeg"
 								alt="curry" />
 							<div class="m-4">
 								<span class="font-bold">Tofu curry</span>
@@ -158,7 +158,7 @@
 						<div class="card hover:shadow-lg">
 							<img
 								class="w-full h-32 sm:h-48 object-cover"
-								src="/public/img/stew.jpeg"
+								src="img/stew.jpeg"
 								alt="stew" />
 							<div class="m-4">
 								<span class="font-bold">Bean Chilli Stew</span>
@@ -185,7 +185,7 @@
 						<div class="card hover:shadow-lg">
 							<img
 								class="w-full h-32 sm:h-48 object-cover"
-								src="/public/img/noodles.jpg"
+								src="img/noodles.jpg"
 								alt="noodles" />
 							<div class="m-4">
 								<span class="font-bold">noodles</span>
@@ -224,6 +224,6 @@
 				</div>
 			</main>
 		</div>
-		<script src="index.js"></script>
+		<script src="/src/index.js"></script>
 	</body>
 </html>
